--- a/mano_failai/css/layout.css
+++ b/mano_failai/css/layout.css
@@ -11,7 +11,9 @@ body {
 main {
     display: flex;
 }
-
+aside > main {
+    display: grid;
+}
 main > aside, main > section {
     float: left;
 }
