--- a/mano_failai/css/manodizainas.css
+++ b/mano_failai/css/manodizainas.css
@@ -22,6 +22,9 @@ footer {
     height: 50px;
 }
 
+.more_footer{
+    height:25px
+}
 
 /* nav > a */
 body > header > nav > * {
@@ -31,4 +34,12 @@ body > header > nav > * {
 }
 body > header > nav > *:last-child {
     border-right: none;
+}
+
+.test {
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
