--- a/mano_failai/css/layout.css
+++ b/mano_failai/css/layout.css
@@ -19,7 +19,17 @@ body > footer {
 }
 body > header {
     grid-area: h;
+    display: grid;
+    grid-template-columns: 4fr 8fr;
 }
+
+/* Centruojame DIV taga esanti NAV tago viduje ir pastumiaim i desine puse */
+body > header > nav {
+    display: flex;
+    align-items: center;
+    justify-content: end;
+}
+
 body > aside {
     grid-area: a;
 }
