--- a/mano_failai/css/manodizainas.css
+++ b/mano_failai/css/manodizainas.css
@@ -1,8 +1,3 @@
-nav a {
-    text-decoration: none;
-    text-transform: uppercase;
-}
-
 .gallery img {
     border: 1px solid red;
 }
@@ -22,20 +17,17 @@ footer, header {
     height:25px
 }
 
-/* nav > a */
-body > header > nav > * {
+.meniu_item {
+    text-decoration: none;
+    text-transform: uppercase;
     color: white;
     padding: 0 10px;
     border-right: 1px solid white;
 }
-body > header > nav > *:last-child {
+.meniu_item:last-child {
     border-right: none;
 }
 
-.test {
-    width: 100px;
-    height: 100px;
-    position: absolute;
-    top: 0;
-    left: 0;
+body > aside {
+    border: 1px solid lightgray;
 }
