--- a/mano_failai/css/portfolio.css
+++ b/mano_failai/css/portfolio.css
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-gap: 10px;
-    grid-template-rows: 150px 150px 150px;
+    grid-auto-rows: 150px;
 }
 
 body {
@@ -10,4 +10,16 @@ body {
         "h h"
         "m m"
         "ft ft";
+}
+
+.gallery > div {
+    overflow: hidden;
+}
+.gallery > div  > img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+.gallery > div  {
+    background: url("https://picsum.photos/200/300") no-repeat center center;
 }
